Thu Jan 25 01:35:52 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* rd_req_dec.c (krb5_rd_req_decrypt_tkt_part): Remove outdated
        comment about mapping etype to ktype.

	* gc_via_tkt.c (krb5_get_cred_via_tkt): If the keyblock.enctype is
        non-null in in_cred, then request that particular key.

Wed Jan 24 21:48:53 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* get_creds.c (krb5_get_credentials): Only match against enctype
        if it is non-null in increds.

Sun Jan 21 23:32:53 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* gc_via_tkt.c (krb5_kdcrep2creds): Set is_skey so get_creds won't
		break trying to match is_skey in the ccache.  This way we
		won't end up with many copies of user-to-user tickets.

Fri Jan 19 23:16:17 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* mk_req.c (krb5_mk_req): krb5_get_credentials does not take
		default_kdc_options. 

	* sendauth.c (krb5_sendauth): krb5_get_credentials does not take
		default_kdc_options. 

Wed Jan 10 21:01:36 1996  Theodore Y. Ts'o  <tytso@dcl>

	* init_ctx.c (krb5_init_context): Added checking of profile for
	        DCE compatability options (ccache type, and checksum type).

	* fwd_tgt.c (krb5_fwd_tgt_creds): Initialize addrs to 0 so that we
		don't try to free stack garbage on an error.

	* krbconfig.c, Makefile.in: Removed krbconfig.c; it contained
		global variables which are no longer used.

	* recvauth.c: Removed the global extern of
		krb5_kdc_default_options, which wasn't being used anyway.

	* mk_req.c (krb5_mk_req): Replace use of krb5_kdc_default_options
		with context->kdc_default_options.

	* gc_frm_kdc.c: Remove the global extern of krb5_kdc_req_sumtype,
		which wasn't being used anymore anyway.

	* send_tgs.c (krb5_send_tgs_basic): Remove use of the global
		variable krb5_kdc_req_sumtype, and use the kdc_req_sumtype
		in the context structure instead.

	* walk_rtree.c (krb5_walk_realm_tree): Applied patch submitted by
		Doug Engbert, so that the configurable authentication